force-app/main/default/objects/Loan_Application__c/fields/Amortization_Months__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Months__c</fullName>
    <label>Amortization_Months</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>