force-app/main/default/objects/Loan_Application__c/fields/Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income__c</fullName>
    <label>Annual_Income</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>