force-app/main/default/objects/Loan_Application__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <label>Decline_Reason</label>
    <type>Text</type>
    <length>255</length>
</CustomField>