force-app/main/default/objects/Loan_Application__c/fields/GDS_Ratio__c.field-meta.xml
<CustomField>
    <fullName>GDS_Ratio__c</fullName>
    <label>GDS_Ratio</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>