force-app/main/default/objects/Loan_Application__c/fields/Monthly_Debt_Payments__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Debt_Payments__c</fullName>
    <label>Monthly_Debt_Payments</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>