force-app/main/default/objects/Loan_Application__c/fields/Monthly_Housing_Costs__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Housing_Costs__c</fullName>
    <label>Monthly_Housing_Costs</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>