force-app/main/default/objects/Loan_Application__c/fields/Offered_Rate__c.field-meta.xml
<CustomField>
    <fullName>Offered_Rate__c</fullName>
    <label>Offered_Rate</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>