force-app/main/default/objects/Loan_Application__c/fields/TDS_Ratio__c.field-meta.xml
<CustomField>
    <fullName>TDS_Ratio__c</fullName>
    <label>TDS_Ratio</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>